[project]
name = "himada"
version = "0.1.0"
description = "Himada — Historical Market Data Downloader"
requires-python = ">=3.10"

dependencies = [
    "PySide6>=6.5",
    "pandas>=2.0",
    "yfinance>=0.2"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
